--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "imsop/rabbit-retry",
     "description": "Delay RabbitMQ messages by a set amount, or re-queue them a limited amount of time.",
     "require": {
-        "videlalvaro/php-amqplib": "2.4.*"
+        "php-amqplib/php-amqplib": "2.5.*"
     },
     "license": "MIT",
 
