--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "imsop/rabbit-retry",
     "description": "Delay RabbitMQ messages by a set amount, or re-queue them a limited amount of time.",
     "require": {
-        "php-amqplib/php-amqplib": "^3.2.0"
+        "php-amqplib/php-amqplib": "^2.5 || ^3.0"
     },
     "license": "MIT",
 
